--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programming Hero Assignment 01</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="nav-bar">
+            <a href="#">LOGO</a>
+            <button>Sign Up</button>
+        </nav>
+    </header>
     
 </body>
 </html>
