--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
             <a href="#">LOGO</a>
             <button>Sign Up</button>
         </nav>
+
+        <div class="header-main-section">
+            <h1>Cool Dark UI Template for <br> Webflow Agencies!</h1>
+            <button>Stay Focused</button>
+        </div>
     </header>
     
 </body>
