--- a/index.html
+++ b/index.html
@@ -19,5 +19,16 @@
         </div>
     </header>
     
+    <div class="action-section">
+        <div class="action-section-left">
+            <h3>See It in Action</h3>
+            <p>Explore the live preview and imagine your brand in this bold new look.</p>
+            <button>Launch Live Preview</button>
+        </div>
+        <div class="action-section-right">
+            <img src="/Assets/wc-mini.png" alt="">
+        </div>
+
+    </div>
 </body>
 </html>
