productive user section done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- header -->
     <header>
         <nav class="nav-bar">
             <a href="#">LOGO</a>
@@ -19,16 +20,38 @@
         </div>
     </header>
     
+    <!-- action-section -->
     <div class="action-section">
         <div class="action-section-left">
             <h3>See It in Action</h3>
             <p>Explore the live preview and imagine your brand in this bold new look.</p>
             <button>Launch Live Preview</button>
         </div>
+
         <div class="action-section-right">
             <img src="/Assets/wc-mini.png" alt="">
         </div>
 
     </div>
+
+
+    <!-- Productive Users Section -->
+     <div class="productive-user-section flex">
+        <h2>Joined Thousands of Productive Users</h2>
+        <div class="productive-user-section-info flex">
+            <div class="productive-user-section-info-data">
+                <h2>50K</h2>
+                <p>Active Users</p>
+            </div>
+            <div class="productive-user-section-info-data">
+                <h2>2M+</h2>
+                <p>Focus Sessions</p>
+            </div>
+            <div class="productive-user-section-info-data">
+                <h2>95%</h2>
+                <p>Satisfaction Rate</p>
+            </div>
+        </div>
+     </div>
 </body>
 </html>
