--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 
     </div>
 
-
     <!-- Productive Users Section -->
      <div class="productive-user-section flex">
         <h2>Joined Thousands of Productive Users</h2>
@@ -52,6 +51,24 @@
                 <p>Satisfaction Rate</p>
             </div>
         </div>
+     </div>
+
+     <!-- <div class="Users-Feedback-Section">
+        <h2>What our users say</h2>
+     </div> -->
+
+     <div class="lets-get-in-touch-section flex">
+        <h1>Let’s Get In <br> Touch</h1>
+
+        <form action="" >
+            <label for="email">Email</label>
+            <input type="email" name="" id="email" placeholder="example@email.com">
+            <label for="name">Name</label>
+            <input type="text" id="name" placeholder="full name">
+            <label for="message">Message</label>
+            <textarea name="" id="message" cols="30" rows="10" placeholder="write your message...."></textarea>
+            <input class="btn" type="button" value="Get In Touch">
+        </form>
      </div>
 </body>
 </html>
