--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="action-section-right">
-            <img src="/Assets/wc-mini.png" alt="">
+            <img src="./Assets/wc-mini.png" alt="">
         </div>
 
     </div>
@@ -70,5 +70,17 @@
             <input class="btn" type="button" value="Get In Touch">
         </form>
      </div>
+
+<!-- footer section -->
+     <footer >
+        <a href="" class="footer-logo">LOGO</a>
+        <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+        <div class="footer-links">
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">How It Works</a>
+            <a href="">Services</a>
+        </div>
+     </footer>
 </body>
 </html>
